--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+
+
+.title {
+  font-family: "Courier New", Courier, monospace;
+  font-size: 30px;
+  letter-spacing: 2.8px;
+  word-spacing: -0.6px;
+  color: white;
+  font-weight: 700;
+  text-decoration: underline solid black;
+  font-style: normal;
+  font-variant: normal;
+  text-transform: uppercase;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.siteheader {
+  width: 100%;
   background-color: #282c34;
-  min-height: 100vh;
+  opacity: 50%;
+  text-align: center;
   display: flex;
   flex-direction: column;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.date {
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imgTitle {
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 25px;
+  font-weight: 600;
+}
+
+
+.imageDiv {
+  width: 100%;
+  display: flex;
+  
+}
+
+.image {
+  width: 80%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.descriptionDiv {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+.description {
+font-size: large;
+text-align: center;
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
